add console logs

--- a/mockPage.html
+++ b/mockPage.html
@@ -6,8 +6,12 @@
 <body>
   <script>
     fetch('/api/productsList')
-      .then(response => response.json())
-      .then(data => console.log(data));
+      .then(response => {
+        console.log('Fetch status:', response.status);
+        return response.json();
+      })
+      .then(data => console.log('Fetch data:', data))
+      .catch(error => console.error('Fetch error:', error));
   </script>
 </body>
 </html>
