--- a/tests/mockPage.html
+++ b/tests/mockPage.html
@@ -7,7 +7,7 @@
   <script>
     fetch('/api/productsList')
       .then(response => response.json())
-      .then(data => console.log(data));
+      .then(data => console.log(data))
   </script>
 </body>
 </html>
